--- a/helm-values/ncd24-fastapi-dev.yaml
+++ b/helm-values/ncd24-fastapi-dev.yaml
@@ -3,8 +3,8 @@ nodePortEnabled: true
 nodePort: 31002
 containerPort: 8000
 image:
-  repository: ghcr.io/CHANGEME/ncd24-fastapi
-  tag: dev
+  repository: ghcr.io/pantchanit/ncd24-fastapi
+  tag: dev-f89a4e9
   pullPolicy: Always
 probe:
   enabled: true
